{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 13,
  "lineage": "2f82bc9e-ab1e-fa2f-fa3e-7a521c1426d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pubonline-api-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0182f373e66f89c85",
            "arn": "arn:aws:ec2:us-east-1:637423198562:instance/i-05646a8af2d4c1f45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05646a8af2d4c1f45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pubonline-api-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080c96ea4d5ac14e5",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-54-227-193-80.compute-1.amazonaws.com",
            "public_ip": "54.227.193.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0001ba42df44bfc5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0889f3edd9822a09f",
            "tags": {
              "name": "pubonline-api-ec2"
            },
            "tags_all": {
              "name": "pubonline-api-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e146a9e167f3d1eb"
            ]
          },
          "dependencies": [
            "aws_key_pair.pubonline-api-key",
            "aws_security_group.pubonline-api-sg",
            "aws_subnet.pubonline-api-subnet",
            "aws_vpc.pubonline-api-vpc",
            "data.aws_ami.pubonline-api-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pubonline-api-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:internet-gateway/igw-053e630a812fb14dc",
            "id": "igw-053e630a812fb14dc",
            "owner_id": "637423198562",
            "tags": {
              "name": "pubonline-api-gateway"
            },
            "tags_all": {
              "name": "pubonline-api-gateway"
            },
            "vpc_id": "vpc-0bc443100671ba502"
          },
          "dependencies": [
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pubonline-api-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-053e630a812fb14dc",
            "id": "r-rtb-0a9593654d1775b3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9593654d1775b3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pubonline-api-gateway",
            "aws_route_table.pubonline-api-route-table",
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubonline-api-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:route-table/rtb-0a9593654d1775b3c",
            "id": "rtb-0a9593654d1775b3c",
            "owner_id": "637423198562",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "pubonline-api-route-table"
            },
            "tags_all": {
              "name": "pubonline-api-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc443100671ba502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubonline-api-route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6a9d87659dc61b",
            "route_table_id": "rtb-0a9593654d1775b3c",
            "subnet_id": "subnet-0889f3edd9822a09f"
          },
          "dependencies": [
            "aws_route_table.pubonline-api-route-table",
            "aws_subnet.pubonline-api-subnet",
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pubonline-api-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:security-group/sg-0e146a9e167f3d1eb",
            "description": "Security Group for Pubonline Api",
            "egress": [],
            "id": "sg-0e146a9e167f3d1eb",
            "ingress": [],
            "name": "pubonline-api-sg",
            "name_prefix": "",
            "owner_id": "637423198562",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc443100671ba502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-http-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2275131080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e146a9e167f3d1eb",
            "security_group_rule_id": "sgr-09e185437c39b66a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-api-sg",
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-pub-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3714405716",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e146a9e167f3d1eb",
            "security_group_rule_id": "sgr-0283d86c98476fa3b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-api-sg",
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-ssh-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3298035619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e146a9e167f3d1eb",
            "security_group_rule_id": "sgr-01489460e705ef38c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-api-sg",
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubonline-api-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:subnet/subnet-0889f3edd9822a09f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889f3edd9822a09f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423198562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pubonline-api-subnet-pub"
            },
            "tags_all": {
              "name": "pubonline-api-subnet-pub"
            },
            "vpc_id": "vpc-0bc443100671ba502"
          },
          "dependencies": [
            "aws_vpc.pubonline-api-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pubonline-api-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:vpc/vpc-0bc443100671ba502",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0252f288ff626b63d",
            "default_route_table_id": "rtb-054485f086973e4ed",
            "default_security_group_id": "sg-00a39af67a042379e",
            "dhcp_options_id": "dopt-0d6f4b07fe85bce72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc443100671ba502",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054485f086973e4ed",
            "owner_id": "637423198562",
            "tags": {
              "name": "pubonline-api-vpc"
            },
            "tags_all": {
              "name": "pubonline-api-vpc"
            }
          }
        }
      ]
    }
  ]
}